fix all layout issue admin dashbord and user admin dashboard page

--- a/src/AdminDashboard/DashboardForAdmin/DashBoardForAdmin.css
+++ b/src/AdminDashboard/DashboardForAdmin/DashBoardForAdmin.css
@@ -1,3 +1,30 @@
 .ant-drawer-body{
     background-color: #020617 !important;
 }
+
+@media only screen and (min-width: 668px) {
+    .outlet_layout_issue_admin{
+        height: 92%;
+    }
+}
+
+
+@media only screen and (min-width: 668px) {
+    .admin_dashboard_height_issue_logo_div{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 250px; 
+    }
+}
+@media only screen and (min-width: 668px) {
+    .admin_dashboard_first_layoutIssue{
+        position: absolute;
+        top: 250px; 
+        left: 0;
+        bottom: 0; 
+        width:100%;
+        overflow-y: auto; 
+    }
+}
