--- a/src/UserAdminDashboard/UserAdminHomePage/UserAdminHomePage.css
+++ b/src/UserAdminDashboard/UserAdminHomePage/UserAdminHomePage.css
@@ -7,4 +7,24 @@
     .outlet_layout_issue{
         height: 92%;
     }
-  }
+}
+
+@media only screen and (min-width: 668px) {
+    .for_height_issue_logo_div{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 200px; 
+    }
+}
+@media only screen and (min-width: 668px) {
+    .first_layoutIssue{
+        position: absolute;
+        top: 200px; 
+        left: 0;
+        bottom: 0; 
+        width:100%;
+        overflow-y: auto; 
+    }
+}
